hs-bindgen/fixtures/delay_traces.rs

/* automatically generated by rust-bindgen 0.71.1 */

unsafe extern "C" {
    pub fn long_double_function(arg1: u128);
}
unsafe extern "C" {
    pub fn var_arg_function(fmt: *const ::std::os::raw::c_char, ...);
}
#[repr(C)]
#[repr(align(16))]
#[derive(Debug, Copy, Clone)]
pub struct long_double_s {
    pub x: u128,
    pub y: f64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of long_double_s"][::std::mem::size_of::<long_double_s>() - 32usize];
    ["Alignment of long_double_s"][::std::mem::align_of::<long_double_s>() - 16usize];
    [
        "Offset of field: long_double_s::x",
    ][::std::mem::offset_of!(long_double_s, x) - 0usize];
    [
        "Offset of field: long_double_s::y",
    ][::std::mem::offset_of!(long_double_s, y) - 16usize];
};
#[repr(C)]
#[repr(align(16))]
#[derive(Debug, Copy, Clone)]
pub struct nested_long_double_s {
    pub inner_s_member: nested_long_double_s__bindgen_ty_1,
}
#[repr(C)]
#[repr(align(16))]
#[derive(Debug, Copy, Clone)]
pub struct nested_long_double_s__bindgen_ty_1 {
    pub inner_int_member: u128,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    [
        "Size of nested_long_double_s__bindgen_ty_1",
    ][::std::mem::size_of::<nested_long_double_s__bindgen_ty_1>() - 16usize];
    [
        "Alignment of nested_long_double_s__bindgen_ty_1",
    ][::std::mem::align_of::<nested_long_double_s__bindgen_ty_1>() - 16usize];
    [
        "Offset of field: nested_long_double_s__bindgen_ty_1::inner_int_member",
    ][::std::mem::offset_of!(nested_long_double_s__bindgen_ty_1, inner_int_member)
        - 0usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    [
        "Size of nested_long_double_s",
    ][::std::mem::size_of::<nested_long_double_s>() - 16usize];
    [
        "Alignment of nested_long_double_s",
    ][::std::mem::align_of::<nested_long_double_s>() - 16usize];
    [
        "Offset of field: nested_long_double_s::inner_s_member",
    ][::std::mem::offset_of!(nested_long_double_s, inner_s_member) - 0usize];
};
unsafe extern "C" {
    pub static mut long_double_var1: u128;
}
unsafe extern "C" {
    pub static mut long_double_var2: u128;
}
unsafe extern "C" {
    pub fn long_double_fun(arg1: u128);
}
